# igrisv4

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  generated_20260701_125847.rust  generated_20260701_125921.python  generated_20260701_131451.rust  igris.html  igrisv3.exe.manifest  igrisv3.rc  implementation.md  tailwind.css
assets/: main.css  tailwind.css
icons/: igris_icon.icns
proto/riva/proto/: riva_asr.proto  riva_audio.proto  riva_common.proto
src/: config.rs  lib.rs  main.rs  platform_utils.rs  processor.rs  state.rs  tools.rs  voice.rs
src/commands/: about.rs  app_utils.rs  browser_automation.rs  ffmpeg_camera.rs  files.rs  mod.rs  reminders.rs  system.rs  web.rs
src/core/: about.rs  audio_capture.rs  local_llm.rs  mod.rs  stt.rs  tts.rs  vad.rs  wake_word.rs
src/eco/: clipboard.rs  config.rs  constants.rs  crypto.rs  device.rs  discovery.rs  errors.rs  events.rs  manager.rs  mod.rs  notification.rs  notifications.rs  pairing.rs  permissions.rs  protocol.rs  storage.rs  sync.rs  transport.rs
src/fastswap/: mod.rs  tls.rs
src/fastswap/models/: device.rs  mod.rs  progress.rs  transfer.rs
src/fastswap/network/: client.rs  discovery.rs  mod.rs  server.rs
src/media/: mod.rs
src/media/ffmpeg_camera/: mod.rs
src/nlu/: context.rs  engine.rs  mod.rs  ner.rs  nlu_processor.rs  sbert.rs  sentence_splitter.rs
src/online/: intent_router.rs  mod.rs  reasoning.rs  stt.rs  task_planner.rs
src/platform/: app_launcher.rs  file_system.rs  mod.rs  process_builder.rs  system_control.rs
src/platform/ecosystem/: linux.rs  macos.rs  mod.rs  windows.rs
src/platform/ecosystem/notifications/: linux.rs  macos.rs  mod.rs  windows.rs
src/plugins/: mod.rs  system.rs
src/plugins/builtin/: browsers.rs  camera.rs  communication.rs  creative.rs  editors.rs  files.rs  gaming.rs  media.rs  mod.rs  office.rs  reminders.rs  system_control.rs  utilities.rs
src/setup_manager/: downloader.rs  extractor.rs  gui.rs  mod.rs  permissions.rs  permissions_ui.rs  validator.rs
src/tools/: command_modifier.rs  mod.rs  registry.rs
src/ui/: alarm_reminder_panel.rs  camera_panel.rs  chat_panel.rs  eco_device_panel.rs  fastswap_panel.rs  file_picker.rs  incoming_transfer_popup.rs  menu_button.rs  mod.rs  notification_panel.rs  search_results.rs  settings.rs  sidebar.rs  system_info_panel.rs
src/ui/presentation/: mod.rs  panel.rs  slides.rs
src/utils/: greetings.rs  hotkey.rs  mod.rs  process_tracker.rs  shared_memory.rs
